<resources>
    <string name="app_name">EN-DE Dict</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="admob_app_id">ca-app-pub-3804917058566737~2032576986</string>
    <string name="banner_ad_unit_id">ca-app-pub-3804917058566737/1649433604</string>
    <!--string name="admob_app_id">ca-app-pub-3804917058566737~5010754000</string-->
    <!--string name="banner_ad_unit_id">ca-app-pub-3804917058566737/5091479207</string-->
    <!--string name="interstitial_ad_unit_id">ca-app-pub-3804917058566737/5091479207</string-->
    <string name="channel_description">Show notify clipboard translate</string>
    <string name="str_hint_search_bar">English-German Dictionary</string>
    <string name="str_dict_name">English-German</string>
    <string name="str_dictionary">Dictionary</string>
    <string name="title_search">Search</string>
    <string name="title_history">History</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_translate">Translate</string>
    <string name="title_swap_dict">Swap Dictionary</string>
    <string name="title_quick_search">Quick Search</string>
    <string name="title_open_dict">Open Dictionary</string>
    <string name="title_download_dict">Download Dictionary</string>
    <string name="title_share_app">Share App</string>
    <string name="title_rate_app">Rate App</string>
    <string name="title_more_app">More Apps</string>
    <string name="title_remove_ads">Remove Ads</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="share_app_title">Share DictDroid via</string>
    <string name="app_caption_download_dict">Dictdroid - Download Dictionary</string>
    <string name="history_word">hello</string>
    <string name="history_time">hh:mm a MMM dd, yyyy</string>
    <string name="button_translate">Translate</string>
    <string name="translate_from">Translate from...</string>
    <string name="translate_to">Translate to...</string>
    <string name="text_to_translate">Enter the text to translate</string>
    <string name="translate_network_msg">This feature requires Internet connection!</string>
    <string name="delete_history">Delete History</string>
    <string name="delete_favorite">Delete Favorite</string>
    <string name="delete_dictionary">Delete Dictionary</string>
    <string name="alert_dialog_exit_app">Do you want to exit application?</string>
    <string name="alert_dialog_delete_confirm">Do you want to delete selected items?</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_no">No</string>
    <!--http://www.xynotec.com/dictdroid/listdict.csv-->
    <string name="csv_url">GPPTWPVXXR1iQM+ZwquE9cesxlqdysUvcbISeV3mOyTGDXHKDLKHT92l5hi9fiDm</string>
    <!--http://www.xynotec.com/dictdroid/data/-->
    <string name="mdo_url">GPPTWPVXXR1iQM+ZwquE9cesxlqdysUvcbISeV3mOyQyK7o73puxf4JmCqYHokz7</string>
    <string name="secretkey">31ceToNyX02</string>
    <string name="str_ok">OK</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_downloading">Downloading:</string>
    <string name="str_tutorial">Downloading dictionary requires Internet. Please enable it and click refresh button on the toolbar. After you complete downloading, the app does not require Internet anymore.</string>
    <string name="str_first_download">There is no default dictionary. Please download it.</string>
    <string name="str_download_dict_complete">Downloading %s dictionary is complete. Do you want to open it?</string>
    <string name="str_download_dict_error">Downloading %s dictionary is error. Please try again.</string>
    <string name="dict_in_use">Current dictionary is</string>
    <string name="dict_state_active">IN USE</string>
    <string name="dict_state_downloaded">DOWNLOADED</string>
    <string name="about_title">About</string>
    <string name="about_copyright">©Copyright by Xynotec 2019</string>
    <string name="about_infoandsupport">Info and support:</string>
    <string name="about_email">support@xynotec.com</string>
    <string name="about_website">http://www.xynotec.com</string>
    <string name="text_main_item">Main Item Text</string>
    <string name="text_sub_item">Sub Item Text</string>
    <string name="text_hint_item">DOWNLOADED</string>
    <string name="settings_title">Settings</string>
    <string name="settings_application">Application</string>
    <string name="settings_pronunciation">Pronunciation</string>
    <string name="settings_text_size">Mean text size</string>
    <string name="settings_tts_engine">Android Text To Speech Engine</string>
    <string name="settings_not_require">Does not require internet connection</string>
    <string name="settings_google_engine">Google Text To Speech Engine</string>
    <string name="settings_require">Require internet connection</string>
    <string name="settings_zoom_scale">Zoom scale: 100%</string>
    <string name="settings_quick_text_size">Text size: 100%</string>
    <string name="settings_quick_search">Quick Search</string>
    <string name="settings_auto_search">Auto lookup clipboard</string>
    <string name="settings_auto_search_more">Looking up of the word in clipboard</string>
    <string name="str_guide_quicksearch">Long press and drag at center window to move, corner window to resize.</string>
    <string name="str_skip">Do not show again</string>
    <string name="clipboard_is_active">Auto lookup clipboard is active</string>
    <string name="clipboard_turn_off">Turn off</string>
    <string name="iap_already_removed_ads">"You had already removed ads before."</string>
    <string name="iap_thank_remove_ads">"Thank you for removing ads"</string>
    <string name="iap_err_auth_verify">"Error purchasing. Authenticity verification failed."</string>
    <string name="permision_available_storage">External storage permissions have been granted.</string>
    <string name="permissions_not_granted">Permissions were not granted.</string>
    <string name="permission_storage_rationale">Read write external storage permissions are needed to use dictionary data.</string>
    <string name="permission_storage_notify1">Please press [ALLOW] button to grant Storage Permissions for downloading dictionary data.</string>
    <string name="permission_storage_notify2">User must be pressing [ALLOW] button to grant Storage Permissions for downloading dictionary data</string>
    <string name="permission_go_app_setting">User does not allow Dictdroid to grant Storage Permission. Dictdroid can not download dictonary data. For downloading data, please go to Settings->Apps->Dictdroid->Permissions to enable Storage Permissions. Do you want to enable it?</string>
    <string name="permission_quick_search_draw_over_permissions">For using [Quick Search] function, user must be enable the permission [Draw Over Other Apps]. Do you want to enable it?</string>
    <string name="permission_lookuup_clipboarddraw_over_permissions">For using [Auto Lookup Clipboard] function, user must be enable the permission [Draw Over Other Apps]. Do you want to enable it?</string>
</resources>
