<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="translateVM"
            type="com.xynotec.dictdroid.ui.main.translate.TranslateViewModel" />

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp" >

                    <Spinner
                        android:id="@+id/spinnerFromLang"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:prompt="@string/translate_from" >
                    </Spinner>

                    <ImageView
                        android:id="@+id/buttonSwap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="5dip"
                        android:paddingRight="5dip"
                        app:srcCompat="@drawable/ic_translate_swap">
                    </ImageView>

                    <Spinner
                        android:id="@+id/spinnerToLang"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:prompt="@string/translate_to" >
                    </Spinner>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:layout_margin="5dp">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <EditText
                            android:id="@+id/input"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="top|left"
                            android:hint="@string/text_to_translate"
                            android:imeOptions="actionDone"
                            android:paddingRight="30dp"
                            android:singleLine="true"
                            android:text="@={translateVM.strInput}"/>

                        <ImageView
                            android:id="@+id/btn_clear_input"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top|right"
                            app:srcCompat="@drawable/ic_translate_clear"
                            android:layout_marginRight="8dp"
                            android:layout_marginTop="8dp"
                            android:onClick="@{() -> translateVM.clearInput()}"
                            android:visibility="@{(translateVM.strInput.length() == 0) ? View.GONE : View.VISIBLE}" />
                    </FrameLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/buttonTranslate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_translate"
                        android:textColor="#ffffffff"
                        android:background="@color/colorPrimary"
                        android:minHeight="30dp">

                    </Button>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:layout_margin="5dp">

                    <WebView
                        android:id="@+id/webViewTranslate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</layout>