<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.xynotec.dictdroid.ui.setting.SettingActivity">

    <data>

        <variable
            name="settingVM"
            type="com.xynotec.dictdroid.ui.setting.SettingViewModel" />

    </data>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <include
            layout="@layout/app_bar_sub">
        </include>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimaryDark"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/settings_application"
                        android:textAppearance="@style/settings_header_text"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="10dp"
                                android:paddingTop="5dp"
                                android:text="@string/settings_auto_search"
                                android:textAppearance="@style/settings_main_text" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingBottom="5dp"
                                android:paddingLeft="10dp"
                                android:paddingTop="5dp"
                                android:text="@string/settings_auto_search_more"
                                android:textAppearance="@style/settings_sub_text" />

                        </LinearLayout>

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/tg_auto_lookup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="10dp"
                            android:layout_alignParentLeft="false"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentTop="false"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="27dp" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dip"
                        android:background="@color/colorDivider" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >

                            <TextView
                                android:id="@+id/tv_zoom_scale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingBottom="5dp"
                                android:paddingLeft="10dp"
                                android:paddingTop="5dp"
                                android:text="@{settingVM.stringZoomScale}"
                                android:textAppearance="@style/settings_main_text" />

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RelativeLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp">

                                <ImageView
                                    android:layout_width="24dp"
                                    android:layout_height="24dp"
                                    android:layout_alignParentLeft="true"
                                    android:layout_alignParentRight="false"
                                    android:layout_centerVertical="true"
                                    app:srcCompat="@drawable/ic_setting_font"
                                    android:id="@+id/imgFontSmall" />

                                <ImageView
                                    android:layout_width="32dp"
                                    android:layout_height="32dp"
                                    android:layout_alignParentRight="true"
                                    android:layout_centerVertical="true"
                                    app:srcCompat="@drawable/ic_setting_font"
                                    android:id="@+id/imgFontLarge" />

                                <SeekBar
                                    android:id="@+id/sb_zoom"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:max="100"
                                    android:progress="@{settingVM.zoomScale}"
                                    android:onProgressChanged="@{settingVM::onZoomChanged}"
                                    android:layout_toRightOf="@+id/imgFontSmall"
                                    android:layout_toLeftOf="@+id/imgFontLarge" />

                            </RelativeLayout>

                        </TableRow>
                    </TableLayout>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimaryDark"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/settings_quick_search"
                        android:textAppearance="@style/settings_header_text"/>

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >

                            <TextView
                                android:id="@+id/tv_qs_zoom_scale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingBottom="5dp"
                                android:paddingLeft="10dp"
                                android:paddingTop="5dp"
                                android:text="@{settingVM.stringZoomQScale}"
                                android:textAppearance="@style/settings_main_text" />

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RelativeLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp">

                                <ImageView
                                    android:layout_width="24dp"
                                    android:layout_height="24dp"
                                    android:layout_alignParentLeft="true"
                                    android:layout_alignParentRight="false"
                                    android:layout_centerVertical="true"
                                    app:srcCompat="@drawable/ic_setting_font"
                                    android:id="@+id/img_qs_FontSmall" />

                                <ImageView
                                    android:layout_width="32dp"
                                    android:layout_height="32dp"
                                    android:layout_alignParentRight="true"
                                    android:layout_centerVertical="true"
                                    app:srcCompat="@drawable/ic_setting_font"
                                    android:id="@+id/img_qs_FontLarge" />

                                <SeekBar
                                    android:id="@+id/sb_qs_zoom"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:max="100"
                                    android:progress="@{settingVM.zoomQScale}"
                                    android:onProgressChanged="@{settingVM::onZoomQChanged}"
                                    android:layout_toRightOf="@+id/img_qs_FontSmall"
                                    android:layout_toLeftOf="@+id/img_qs_FontLarge" />

                            </RelativeLayout>

                        </TableRow>
                    </TableLayout>

                </LinearLayout>
            </ScrollView>

            <!--com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id">
            </com.google.android.gms.ads.AdView-->

        </RelativeLayout>
    </LinearLayout>

</layout>